--- a/Pandas-cookbook/cookbook-cn/04.第四章.ipynb
+++ b/Pandas-cookbook/cookbook-cn/04.第四章.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 第四章"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -26,26 +33,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Okay! We're going back to our bike path dataset here. I live in Montreal, and I was curious about whether we're more of a commuter city or a biking-for-fun city -- do people bike more on weekends, or on weekdays?"
+    "好的！ 我们将在这里回顾我们的自行车道数据集。 我住在蒙特利尔，我很好奇我们是一个通勤城市，还是以骑自行车为乐趣的城市 - 人们在周末还是工作日骑自行车？"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4.1 Adding a 'weekday' column to our dataframe"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First, we need to load up the data. We've done this before."
+    "## 4.1 向我们的`DataFrame`中刚添加`weekday`列\n",
+    "首先我们需要加载数据，我们之前已经做过了。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +55,7 @@
        "<AxesSubplot:xlabel='Date'>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -70,7 +71,7 @@
     }
    ],
    "source": [
-    "bikes = pd.read_csv('../data/bikes.csv', sep=';', encoding='latin1', parse_dates=['Date'], dayfirst=True, index_col='Date')\n",
+    "bikes = pd.read_csv('../data/bikes.csv',sep=';',encoding='latin1',parse_dates=['Date'],dayfirst=True,index_col='Date')\n",
     "bikes['Berri 1'].plot()"
    ]
   },
@@ -78,18 +79,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next up, we're just going to look at the Berri bike path. Berri is a street in Montreal, with a pretty important bike path. I use it mostly on my way to the library now, but I used to take it to work sometimes when I worked in Old Montreal. \n",
-    "\n",
-    "So we're going to create a dataframe with just the Berri bikepath in it"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "berri_bikes = bikes[['Berri 1']].copy()"
+    "接下来，我们只是看看 Berri 自行车道。 Berri 是蒙特利尔的一条街道，是一个相当重要的自行车道。 现在我习惯走这条路去图书馆，但我在旧蒙特利尔工作时，我习惯于走这条路去上班。\n",
+    "所以我们要创建一个只有 Berri 自行车道的`DataFrame`。"
    ]
   },
   {
@@ -166,6 +157,7 @@
     }
    ],
    "source": [
+    "berri_bikes = bikes[['Berri 1']]\n",
     "berri_bikes[:5]"
    ]
   },
@@ -173,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we need to add a 'weekday' column. Firstly, we can get the weekday from the index. We haven't talked about indexes yet, but the index is what's on the left on the above dataframe, under 'Date'. It's basically all the days of the year."
+    "接下来，我们需要添加一列`weekday`。 首先，我们可以从索引得到星期。 我们还没有谈到索引，但索引在上面的`DataFrame`中是左边的东西，在Date下面。 它基本上是一年中的所有日子。"
    ]
   },
   {
@@ -202,9 +194,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can see that actually some of the days are missing -- only 310 days of the year are actually there. Who knows why.\n",
+    "你可以看到，实际上缺少一些日期 - 实际上只有一年的 310 天。 天知道为什么。\n",
     "\n",
-    "Pandas has a bunch of really great time series functionality, so if we wanted to get the day of the month for each row, we could do it like this:"
+    "Pandas 有一堆非常棒的时间序列功能，所以如果我们想得到每一行的月份中的日期，我们可以这样做："
    ]
   },
   {
@@ -233,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We actually want the weekday, though:"
+    "我们实际上想要星期："
    ]
   },
   {
@@ -262,9 +254,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These are the days of the week, where 0 is Monday. I found out that 0 was Monday by checking on a calendar.\n",
+    "这是周中的日期，其中 0 是星期一。我通过查询日历得到 0 是星期一。\n",
     "\n",
-    "Now that we know how to *get* the weekday, we can add it as a column in our dataframe like this:"
+    "现在我们知道了如何获取星期，我们可以将其添加到我们的`DataFrame`中作为一列："
    ]
   },
   {
@@ -272,6 +264,18 @@
    "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/qp/w7t0hyg957d_xlc3kv2q49sw0000gn/T/ipykernel_11710/1633736244.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  berri_bikes['weekday'] = berri_bikes.index.weekday\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -348,7 +352,7 @@
     }
    ],
    "source": [
-    "berri_bikes.loc[:,'weekday'] = berri_bikes.index.weekday\n",
+    "berri_bikes['weekday'] = berri_bikes.index.weekday\n",
     "berri_bikes[:5]"
    ]
   },
@@ -356,18 +360,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4.2 Adding up the cyclists by weekday"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This turns out to be really easy!\n",
+    "## 4.2 按星期统计骑手\n",
+    "这很易于实现！\n",
     "\n",
-    "Dataframes have a `.groupby()` method that is similar to SQL groupby, if you're familiar with that. I'm not going to explain more about it right now -- if you want to to know more, [the documentation](http://pandas.pydata.org/pandas-docs/stable/groupby.html) is really good.\n",
+    "`Dataframe`有一个类似于 `SQL groupby`的`.groupby()` 方法，如果你熟悉的话。 我现在不打算解释更多 - 如果你想知道更多，请见文档。\n",
     "\n",
-    "In this case, `berri_bikes.groupby('weekday').aggregate(sum)` means \"Group the rows by weekday and then add up all the values with the same weekday\"."
+    "在这种情况下，`berri_bikes.groupby('weekday').aggregate(sum)` 意味着“按星期对行分组，然后将星期相同的所有值相加”。"
    ]
   },
   {
@@ -462,7 +460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It's hard to remember what 0, 1, 2, 3, 4, 5, 6 mean, so we can fix it up and graph it:"
+    "很难记住0, 1, 2, 3, 4, 5, 6是什么，所以让我们修复它并绘制出来："
    ]
   },
   {
@@ -544,7 +542,7 @@
     }
    ],
    "source": [
-    "weekday_counts.index = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n",
+    "weekday_counts.index = ['Monday','Tuesday','Wednesday','Thursday','Friday','Saturday','Sunday']\n",
     "weekday_counts"
    ]
   },
@@ -582,37 +580,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So it looks like Montrealers are commuter cyclists -- they bike much more during the week. Neat!"
+    "所以看起来蒙特利尔是通勤骑自行车的人 - 他们在工作日骑自行车更多。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4.3 Putting it together"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's put all that together, to prove how easy it is. 6 lines of magical pandas!\n",
+    "## 4.3 放到一起\n",
+    "让我们把所有的一起，证明它是多么容易。 6 行的神奇 Pandas！\n",
     "\n",
-    "If you want to play around, try changing `sum` to `max`, `numpy.median`, or any other function you like."
+    "如果你想玩一玩，尝试将sum变为max，np.median，或任何你喜欢的其他函数。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/qp/w7t0hyg957d_xlc3kv2q49sw0000gn/T/ipykernel_11710/1440025429.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  berri_bikes['weekday'] = berri_bikes.index.weekday\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -628,26 +632,15 @@
     }
    ],
    "source": [
-    "bikes = pd.read_csv('../data/bikes.csv', \n",
-    "                    sep=';', encoding='latin1', \n",
-    "                    parse_dates=['Date'], dayfirst=True, \n",
-    "                    index_col='Date')\n",
-    "# Add the weekday column\n",
-    "berri_bikes = bikes[['Berri 1']].copy()\n",
-    "berri_bikes.loc[:,'weekday'] = berri_bikes.index.weekday\n",
+    "bikes = pd.read_csv('../data/bikes.csv',sep=';',encoding='latin1',parse_dates=['Date'],dayfirst=True,index_col='Date')\n",
     "\n",
-    "# Add up the number of cyclists by weekday, and plot!\n",
+    "berri_bikes = bikes[['Berri 1']]\n",
+    "berri_bikes['weekday'] = berri_bikes.index.weekday\n",
+    "\n",
     "weekday_counts = berri_bikes.groupby('weekday').aggregate(sum)\n",
-    "weekday_counts.index = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n",
+    "weekday_counts.index = ['Monday','Tuesday','Wednesday','Thursday','Friday','Saturday','Sunday']\n",
     "weekday_counts.plot(kind='bar')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -668,6 +661,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
   },
+  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "c57bdfac97ca45c05f862af0e07e2a609dfb06d83bc5ec7dd8d02f8ae1750a09"
@@ -675,5 +669,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
