--- a/Pandas-cookbook/cookbook-en/Chapter 9 - Loading data from SQL databases.ipynb
+++ b/Pandas-cookbook/cookbook-en/Chapter 9 - Loading data from SQL databases.ipynb
@@ -287,12 +287,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/erik/.virtualenvs/cookbook/lib/python3.8/site-packages/pandas/core/generic.py:2602: UserWarning: The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
-      "  sql.to_sql(\n"
-     ]
+     "data": {
+      "text/plain": [
+       "8784"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -616,7 +618,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.13 ('JupyterNotebook-5PCSqSH0')",
    "language": "python",
    "name": "python3"
   },
@@ -630,7 +632,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c57bdfac97ca45c05f862af0e07e2a609dfb06d83bc5ec7dd8d02f8ae1750a09"
+   }
   }
  },
  "nbformat": 4,
