--- a/Python/06 面向对象/3.访问限制.ipynb
+++ b/Python/06 面向对象/3.访问限制.ipynb
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "改完后，对于外部代码来说，没什么变动，但是已经无法从外部访问`实例变量__name__和实例变量__score__`了："
+    "改完后，对于外部代码来说，没什么变动，但是已经无法从外部访问`实例变量__name和实例变量__score`了："
    ]
   },
   {
@@ -184,7 +184,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('JupyterNotebook-5PCSqSH0')",
+   "display_name": "Python 3.9.13 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -203,7 +203,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "c57bdfac97ca45c05f862af0e07e2a609dfb06d83bc5ec7dd8d02f8ae1750a09"
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
    }
   }
  },
