--- a/Quant/02金融数据/1.Python获取交易数据.ipynb
+++ b/Quant/02金融数据/1.Python获取交易数据.ipynb
@@ -4,6 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 数据接口\n",
+    "\n",
+    "目前有不少支持Python接口的金融数据库，比如Tushare、AKshare、Baostock、wind等，都可以获得国内股票、基金、期货、利率等数据。\n",
+    "\n",
+    "\n",
     "## 1.Tushare社区\n",
     "公众号上不少文章使用了tushare库获取财经和股票交易数据，当时用的是旧版本（tushare）。Tushare社区目前主要维护新版本：tushare pro，数据更稳定质量更高，可获取沪深股票行情、财务、市场参考等数据，以及指数（含国外股指）、基金、期货、期权、宏观经济、行业经济等财经数据，为金融量化爱好者节省了大量宝贵时间。\n",
     "\n",
@@ -198,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Baostock 证券宝\n",
+    "## 2.Baostock 证券宝\n",
     "baostock也是免费、开源的证券数据平台。提供了大量准确、完整的证券历史行情数据、上市公司财务数据等。通过python API获取证券数据信息，可以满足量化交易投资者、数量金融爱好者、计量经济从业者数据需求。返回的数据格式：pandas DataFrame类型，以便于用pandas/NumPy/Matplotlib进行数据分析和可视化。\n",
     "\n",
     "证券宝链接地址:\n",
@@ -252,22 +257,132 @@
     "ax.spines['top'].set_color('none')    \n",
     "plt.show() "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.AKshare\n",
+    "\n",
+    "### 什么是AKshare？\n",
+    "先简单介绍下AKShare，内容转自官网。\n",
+    "\n",
+    "AKShare 是基于 Python 的开源金融数据接口库，目的是实现对股票、期货、期权、基金、债券、外汇等金融产品和另类数据从数据采集，数据清洗到数据下载的工具，满足金融数据科学家、数据科学爱好者在数据获取方面的需求。\n",
+    "\n",
+    "它的特点是利用 AKShare 获取的是基于可信任数据源发布的原始数据，广大数据科学家可以利用原始数据进行再加工，从而得出科学的结论。\n",
+    "\n",
+    "代码语法符合 PEP8 规范, 数据接口的命名统一;\n",
+    "最佳支持 Python 3.7.5 及其以上版本;\n",
+    "提供最佳的文档支持, 每个数据接口提供详细的说明和示例, 只需要复制粘贴就可以下载数据;\n",
+    "持续维护由于目标网页变化而导致的部分数据接口运行异常问题;\n",
+    "持续更新财经数据接口, 同时优化源代码;\n",
+    "如何安装AKShare？\n",
+    "\n",
+    "> pip install akshare\n",
+    "\n",
+    "AKShare作为python库可以直接通过pip安装，十分快捷。\n",
+    "\n",
+    "### 如何使用AKShare？\n",
+    "首先要导入AKShare库，然后通过接口函数，获取相应的数据。\n",
+    "\n",
+    "最好是在jupyter notebook或者lab环境中来操作，可以很方便地查看和分析数据。\n",
+    "\n",
+    "以获取A股公司列表数据为例："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import akshare as ak\n",
+    "stock_info_a_code_name_df = ak.stock_info_a_code_name()\n",
+    "stock_info_a_code_name_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "目前AKshare数据来源比较多元，接口相对杂乱，大家在使用用过程中需注意检查数据的准确性。\n",
+    "\n",
+    "接下来，罗列一些常用的数据接口，供参考使用。\n",
+    "\n",
+    "获取A 股上市公司实时行情数据\n",
+    "该数据来源新浪，使用时候注意频率，不然会被封IP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import akshare as ak\n",
+    "stock_zh_a_spot_df = ak.stock_zh_a_spot()\n",
+    "stock_zh_a_spot_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "获取某股票历史行情数据\n",
+    "以浦发银行（sh600000）为例："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import akshare as ak\n",
+    "stock_zh_a_daily_qfq_df = ak.stock_zh_a_daily(symbol=\"sh600000\", adjust=\"hfq\")\n",
+    "stock_zh_a_daily_qfq_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "获取公募开放式基金数据"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import akshare as ak\n",
+    "fund_em_open_fund_daily_df = ak.fund_em_open_fund_daily()\n",
+    "fund_em_open_fund_daily_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "上面简单列举了几个数据接口，AKshare还提供了大量的股票、基金、期货等数据，大家可以去探索下。"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.9.13 ('JupyterNotebook-5PCSqSH0')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.10.6"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+    "hash": "c57bdfac97ca45c05f862af0e07e2a609dfb06d83bc5ec7dd8d02f8ae1750a09"
    }
   }
  },
